<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 <LinearLayout
       android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   		 android:orientation="horizontal"
     >
	<EditText
        android:id="@+id/card_key"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        ></EditText>
	 <Button
	        android:id="@+id/btn_card_search"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search"
	        android:layout_gravity="end"
	        />
	 </LinearLayout>
	 
	<ListView
	    android:id="@android:id/list"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" 
	    >
	</ListView>

    <LinearLayout 
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   		 android:orientation="horizontal">
    <Button
        android:id="@+id/btn_card_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre"
        android:layout_gravity="start"
        />
	<TextView 
	    android:id="@+id/card_pageInfo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/pageinfo"
	    />
	 <Button
	        android:id="@+id/btn_card_next"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/next"
	        android:layout_gravity="end"
	  />
	 </LinearLayout>
</LinearLayout>
